Dropdown menu and Title down a titch

--- a/_includes/nav-home.html
+++ b/_includes/nav-home.html
@@ -7,9 +7,9 @@
               <li class="dropdown link">
                 <a href="#" class="dropbtn">Dropdown ↓</a>
                 <div class="dropdown-content">
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
+                  <a href="https://www.facebook.com/edmondsbakery/">Facebook</a>
+                  <a href="#">Instagram</a>
+                  <a href="#">Other?</a>
                 </div>
               </li>
             <li class="link"><a href="{{site.baseurl}}/contact/">Contact</a></li>
