--- a/_includes/nav-page.html
+++ b/_includes/nav-page.html
@@ -5,11 +5,11 @@
               <li class="link"><a href="{{site.baseurl}}/about/">About</a></li>
               <li class="link"><a href="{{site.baseurl}}/archive/">Archive</a></li>
               <li class="dropdown link">
-                <a href="#" class="dropbtn">Dropdown ↓</a>
+                <a href="#" class="dropbtn">Social Media Links ↓</a>
                 <div class="dropdown-content">
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
+                  <a href="https://www.facebook.com/edmondsbakery/">Facebook</a>
+                  <a href="#">Instagram</a>
+                  <a href="#">Other?</a>
                
                 </div>
               </li>
