--- a/_includes/nav-home.html
+++ b/_includes/nav-home.html
@@ -5,7 +5,7 @@
               <li class="link"><a href="{{site.baseurl}}/about/">About</a></li>
               <li class="link"><a href="{{site.baseurl}}/archive/">Archive</a></li>
               <li class="dropdown link">
-                <a href="#" class="dropbtn">Dropdown ↓</a>
+                <a href="#" class="dropbtn">Social Media Links ↓</a>
                 <div class="dropdown-content">
                   <a href="https://www.facebook.com/edmondsbakery/">Facebook</a>
                   <a href="#">Instagram</a>
