instagram, start of possible gallery file, cake images

--- a/_includes/nav-page.html
+++ b/_includes/nav-page.html
@@ -8,7 +8,7 @@
                 <a href="#" class="dropbtn">Social Media Links ↓</a>
                 <div class="dropdown-content">
                   <a href="https://www.facebook.com/edmondsbakery/">Facebook</a>
-                  <a href="#">Instagram</a>
+                  <a href="https://www.instagram.com/kenbellingham/">Instagram</a>
                   <a href="#">Other?</a>
                
                 </div>
