changing the boarders to transparent - care to changes on main page

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -272,7 +272,7 @@ pre {
     }
 }
 .four.border {
-    border-right: 2px solid #f1b52e;
+    border-right: 2px solid transparent;
         @include media-query($on-palm) {
         border-right: none;
     }
