--- a/_includes/nav-home.html
+++ b/_includes/nav-home.html
@@ -3,7 +3,7 @@
             <ul class="nav-ul">
               <li class="link"><a href="{{site.baseurl}}/">Home</a></li>
               <li class="link"><a href="{{site.baseurl}}/about/">About</a></li>
-              <li class="link"><a href="{{site.baseurl}}/Gallery/">Gallery</a></li>
+              <li class="link"><a href="{{site.baseurl}}/gallery/">Gallery</a></li>
               <li class="dropdown link">
                 <a href="#" class="dropbtn">Social Media Links ↓</a>
                 <div class="dropdown-content">
