gallery spacing, color, and titles

--- a/_layouts/gala.html
+++ b/_layouts/gala.html
@@ -4,7 +4,8 @@
 <html>
 {% include head.html %}
 <body>
-<div class="container bg">
+<div class="row" style="margin-top: 2em">
+<div class="container bg-mod">
 {% include nav-page.html %}
  
   {{ content }}
