--- a/_layouts/gala.html
+++ b/_layouts/gala.html
@@ -4,8 +4,13 @@
 <html>
 {% include head.html %}
 <body>
-<div class="container bh">
+<div class="container">
 {% include nav-page.html %}
+{% if page.img %}
+<div class="page-image" style="background-image: url({{site.baseurl}}/img/{{page.img}})"></div>
+{% else %}
+{% endif %}
+<div class="container bh">
 <div class="row" style="margin-top: 2em">
 
   {{ content }}
