fixing a div tag

--- a/_layouts/gala.html
+++ b/_layouts/gala.html
@@ -4,20 +4,17 @@
 <html>
 {% include head.html %}
 <body>
-<div class="container">
+<div class="container bg">
 {% include nav-page.html %}
-{% if page.img %}
-<div class="page-image" style="background-image: url({{site.baseurl}}/img/{{page.img}})"></div>
-{% else %}
-{% endif %}
 
-<div class="row" style="margin-top: 2em">
+	<div class="row" style="margin-top: 2em"> </div>
 
   {{ content }}
   
 {% include footer.html %}
-</div>
 
+
+</div>
 
 </body>
 </html>
