--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -265,7 +265,7 @@ pre {
     background: linear-gradient(to left, #fbff0b , #DD2476); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.bh {
+.bg-mod {
     box-shadow: 0 0 4px #ddd;
      background: #ea75de; /* fallback for old browsers */
     background: -webkit-linear-gradient(to left, #ea75de , #8f1edb); /* Chrome 10-25, Safari 5.1-6 */
