hopefully back to working

--- a/_layouts/gala.html
+++ b/_layouts/gala.html
@@ -5,7 +5,7 @@
 {% include head.html %}
 <body>
 <div class="row" style="margin-top: 2em">
-<div class="container bg-mod">
+<div class="container bg">
 {% include nav-page.html %}
  
   {{ content }}
