--- a/_layouts/gala.html
+++ b/_layouts/gala.html
@@ -4,10 +4,10 @@
 <html>
 {% include head.html %}
 <body>
-<div class="container bg">
+<div class="container">
 {% include nav-page.html %}
 <div class="row" style="margin-top: 2em"> 
- 
+
   {{ content }}
   
 {% include footer.html %}
