--- a/_layouts/gala.html
+++ b/_layouts/gala.html
@@ -15,6 +15,8 @@
        
            <h1 class="page-title">{{page.title}}</h1>
           
+          A small collection of the many cakes we've created over the years
+
           </div>
     </div>
 
@@ -22,7 +24,7 @@
 
 <div class="container bg">
 	{{ content }}
-	
+
 {% include footer.html %}
 </div>
 
