margin under writing

--- a/_layouts/gala.html
+++ b/_layouts/gala.html
@@ -18,7 +18,10 @@
           A small collection of the many cakes we've created over the years
 
           </div>
+
     </div>
+    <div class="row" style="margin-bottom: 2em">
+
 
 </div>
 
