forgot a div tag... again

--- a/_layouts/gala.html
+++ b/_layouts/gala.html
@@ -20,7 +20,7 @@
           </div>
 
     </div>
-    <div class="row" style="margin-bottom: 2em">
+    <div class="row" style="margin-bottom: 2em"> </div>
 
 
 </div>
