--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 <body>
 <div class="container bg">
 <div class="row head-row">
-     <header class="header twelve columns" style="background-image: url({{site.baseurl}}/img/paper-15.png);background-image: url({{site.baseurl}}/img/paper-15.png),linear-gradient(120deg, #32e535, #2befef);">
+     <header class="header twelve columns" style="background-image: url({{site.baseurl}}/img/paper-15.png);background-image: url({{site.baseurl}}/img/paper-15.png),linear-gradient(120deg, #fff82d, #f20000);">
         <a href="{{site.baseurl}}/"><h1 class="headline">{{site.title}}</h1></a>
      </header>
  </div>
