actual gala change and updating the copy in the special section

--- a/_layouts/gala.html
+++ b/_layouts/gala.html
@@ -15,7 +15,7 @@
        
            <h1 class="page-title">{{page.title}}</h1>
           
-          A small collection of the many cakes we've created over the years
+          {{page.words}}
 
           </div>
 
