--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer>
 <div class="container">
     <div class="row">
-            <div class="four columns">{{site.title}}</div>
-            <div class="four columns">Designed by David MacDonald using <a href="http://webjeda.com">Webjeda</a></div>
-            <div class="four columns">All rights reserved</div>
+            <div class="four columns"><a href="http://webjeda.com/bheema/">Theme</a> by <a href="http://webjeda.com">Webjeda</a> </div>
+            <div class="four columns">{{site.title}}</a>
+            <div class="four columns">Created by <a href="http://macdondopl.github.io">DMac</a>
         </div>
 </div>
 </footer>
