forgotten cookies update. footer - put in forgotten div tag

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
             <div class="four columns"><a href="http://webjeda.com/bheema/">Theme</a> by <a href="http://webjeda.com">Webjeda</a> </div>
-            <div class="four columns">{{site.title}}</a>
+            <div class="four columns">{{site.title}}</a></div>
             <div class="four columns">Created by <a href="http://macdondopl.github.io">DMac</a>
         </div>
 </div>
