--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -69,7 +69,7 @@ pre {
   background: #37c376;
   background-repeat: repeat;
   background-position: center center;
-  min-height: 220px;
+/* min-height: 220px; */
   position: relative;
   @include media-query($on-palm) {
       min-height: 150px;
@@ -81,13 +81,13 @@ pre {
   text-align: center;
   font-weight: 600;
   font-size: 100px;
-  height: 100px;
-  line-height: 230px;
+/*  height: 100px; 
+    line-height: 230px; */
   color: #fefefe;
   text-shadow: 1px 1px 0 rgba(140,140,140,0.6) , -1px -1px 1px rgba(0, 0, 0, 0.34);
   @include media-query($on-palm) {
-    font-size: 50px;
-      line-height: 60px;
+    font-size: 70px;
+      line-height: 70px;
     }
 }
 
