--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,5 +3,5 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title }} - {{site.title}}</title>
   <link href="//fonts.googleapis.com/css?family=Raleway:400,600" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="{{site}}/css/main.css">
+  <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
 </head>
