--- a/css/main.scss
+++ b/css/main.scss
@@ -8,6 +8,7 @@ $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 $spacing-unit:     10px;
+$baseurl:          edmonds.github.io;
 $text-color:       #333;
 $background-color: #fdfdfd;
 $brand-color:      #3498db;
