--- a/_layouts/gala.html
+++ b/_layouts/gala.html
@@ -7,7 +7,7 @@
 <div class="container partition">
 {% include nav-page.html %}
 {% if page.img %}
-<div class="page-image" style="background-image: url({{site.baseurl}}/img/{{page.img}})"></div>
+<div class="page-image" style="background-image: url({{site.url}}/img/{{page.img}})"></div>
 {% else %}
 {% endif %}
        <div class="row" style="margin-top: 2em">
