Added the address and phone number

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,16 @@
 <body>
 <div class="container bg">
 <div class="row head-row">
-     <header class="header twelve columns" style="background-image: url({{site.baseurl}}/img/paper-15.png);background-image: url({{site.baseurl}}/img/paper-15.png),linear-gradient(120deg, #fff82d, #f20000);">
+     <header class="header twelve columns" style="background-image: url({{site.baseurl}}/img/paper-15.png);background-image: url({{site.baseurl}}/img/paper-15.png),linear-gradient(to left, #fff82d, #f20000);">
         <a href="{{site.baseurl}}/"><h1 class="headline">{{site.title}}</h1></a>
      </header>
  </div>
+
+
+ <div class="row" style="background-image: url({{site.baseurl}}/img/paper-15.png);background-image: url({{site.baseurl}}/img/paper-15.png),linear-gradient(to left, #fff82d, #f20000);">
+ 	<span class="left" >418 Main St. Edmonds WA 98020</span> <span class="right">(425) 778-6811</span>
+ </div>
+
 {% include nav-home.html %}
  
   {{ content }}
