--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -91,6 +91,14 @@ pre {
     }
 }
 
+.right{
+    float:right;
+}
+
+.left{
+    float:left;
+}
+
 /* Navigation bar */
 .nav-ul {
     list-style: none;
