--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
 
  <div class="row" style="background-image: url({{site.baseurl}}/img/paper-15.png);background-image: url({{site.baseurl}}/img/paper-15.png),linear-gradient(to left, #fff82d, #f20000);">
- 	<span class="left" >418 Main St. Edmonds WA 98020</span> <span class="right">(425) 778-6811</span>
+ 	<span class="left" > &ensp; 418 Main St. Edmonds</span> <span class="right">(425) 778-6811 &ensp;</span>
  </div>
 
 {% include nav-home.html %}
